vehicle history and notification switch and amount when service is completed

--- a/WebClient/src/components/commonComponents/deleteConfirmationPopup/deleteConfirmationPopup.template.html
+++ b/WebClient/src/components/commonComponents/deleteConfirmationPopup/deleteConfirmationPopup.template.html
@@ -2,13 +2,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4>Please confirm before delete </h4>
+                <h4>{{headerTitle}} </h4>
             </div>
 
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <label>Are you sure want to delete ?</label>
+                        <label>{{message}}</label>
                     </div>
                 </div>
 
