home screen cahnged

--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -26,7 +26,7 @@
 
                     <div class="ResGrid">
                         <div class="dTable">
-                            <table style="width: 100%; overflow:scroll;">
+                            <table style="width: 100%; overflow:scroll; font-size: 12px;">
                                 <thead>
                                     <th>Service Date</th>
                                     <th>Service</th>
