--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -4,7 +4,7 @@
     </div>
     <div class="my-product-screen" v-for="product in subscriptions">
         <div class="row">
-            <div class="col-5">
+            <div class="col-5" style="padding-right: 0px;">
                 <img :src="product.ServiceImage" height="100" width="100%" @click="showMoreInfo(service)">
             </div>
             <div class="col-7">
