--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -68,20 +68,25 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="cellrow">
-                        <h5 class="ind">Popular Services</h5>
+                    <div class="cellrow ind">
+                        <h5>Popular Services</h5>
+                        <!-- <span>View All</span> -->
                     </div>
                     <div class="cellrow res" style="overflow: scroll;">
                         <div v-if="frequentServices.length" class="cellCol respno"
-                            v-for="(service, index) in frequentServices" style="padding: 5px; max-width: 200px;">
-
-                            <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                                class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
-                            <div class="serviceName">
-                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
+                            v-for="(service, index) in frequentServices">
+                            <div>
+                            <div class="outer-img">
+                                <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
+                                    class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
+                            </div>
+                            <div class="serviceName serv-pad">
+                                <p class="mt-3 inerhtml" style="font-weight: 500;">{{service.ServiceName}}<br></p>
                                 <span class="mt-3" style="font-weight: 500;">Starting from ₹
                                     {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                             </div>
+                        </div>
+                        <div class="serv-pad">
                             <div class="form-group purchaseButton" style="padding: 5px;"
                                 @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
                                 <span class="">Subscribe @ ₹
@@ -91,7 +96,7 @@
                                 @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
                                 <span class="">Purchase Once</span>
                             </div>
-
+                        </div>
                         </div>
                         <div v-else-if="frequentServices.length == 0" class="row">
                             <label>There are no frequent services</label>
@@ -102,21 +107,26 @@
                     <div style="width: 100%; overflow: scroll; margin-top: 20px;"
                         v-for="(serviceCategory, vehicleCategoryType) in servicesList">
 
-                        <div class="cellrow">
-                            <h5 class="ind">{{serviceCategory.VehicleCategoryTypeName}}</h5>
+                        <div class="cellrow ind">
+                            <h5>{{serviceCategory.VehicleCategoryTypeName}}</h5>
+                            <span>View All</span>
                         </div>
-                        <div class="cellrow res">
+                        <div class="cellrow res" style="overflow: scroll;">
                             <div v-if="serviceCategory.services.length > 0" class="cellCol respno"
                                 v-for="(service, vehicleCategoryType) in serviceCategory.services"
-                                style="padding: 5px;">
-
-                                <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                                    class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
-                                <div class="serviceName">
-                                    <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
+                                >
+                                <div>
+                                <div class="outer-img">
+                                    <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
+                                        class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
+                                </div>
+                                <div class="serviceName serv-pad">
+                                    <p class="mt-3 inerhtml" style="font-weight: 500;">{{service.ServiceName}}<br></p>
                                     <span class="mt-3" style="font-weight: 500;">Starting from ₹
                                         {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                                 </div>
+                            </div>
+                            <div class="serv-pad">
                                 <div class="form-group purchaseButton" style="padding: 5px;"
                                     @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
                                     <span class="">Subscribe @ ₹
@@ -126,7 +136,7 @@
                                     @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
                                     <span class="">Purchase Once</span>
                                 </div>
-
+                            </div>
                             </div>
                             <div class="row" v-else>
                                 <label>There are no services under this category</label>
