--- a/WebClient/src/components/commonComponents/historyPopupComponent/historyPopupComponent.template.html
+++ b/WebClient/src/components/commonComponents/historyPopupComponent/historyPopupComponent.template.html
@@ -12,7 +12,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group" v-if="vehicleDetails">
+                        <div class="" v-if="vehicleDetails" style="text-align: center;">
                             <label>{{vehicleDetails.VehicleName}}</label><br>
                             <label>{{vehicleDetails.VehicleNumber}}</label><br>
                         </div>
