--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -11,11 +11,26 @@
             <div class="row">
                 <div class="col-md-4">
                     <select class="form-control" v-model="pendingServiceFilter.ServiceId">
+                        <option value="-1">All</option>
                         <option v-for="service in adminServiceList" :value="service.ServiceId">{{service.ServiceName}}</option>
+                    </select>
+                </div>
+                <div class="col-md-4">
+                    <select class="form-control" v-model="pendingServiceFilter.AddressId">
+                        <option value=null>--Select Building--</option>
+                        <option v-for="building in buildingList" :value="building.AddressId">
+                            {{building.AddressLine1 + ', ' + building.AddressLine2 + ', ' + building.Landmark}}
+                        </option>
                     </select>
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-4" v-if="selectedTab == 2">
+                    <select class="form-control" v-model="pendingServiceFilter.PersonId">
+                        <option value=null>--Select Service Person--</option>
+                        <option v-for="person in servicePerons" :value="person.UserId">{{person.UserFirstName + ' ' + person.UserLastName}}</option>
+                    </select>
+                </div>
                 <div class="col-md-4">
                     <datePickerComponent :keyString="'StartDate'" v-model="pendingServiceFilter.ServiceDate"
                         :value="pendingServiceFilter.ServiceDate" :format="'Do MMM YYYY'"
@@ -23,7 +38,7 @@
                     </datePickerComponent>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-success btn-sm" @click="getRequestedServices(1)">Search</button>
+                    <button class="btn btn-success btn-sm" @click="getRequestedServices">Search</button>
                 </div>
             </div>
         </div>
@@ -85,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" v-if="selectedTab === 2" :class="{ active: selectedTab === 2 }">
+                <div class="tab-pane" v-if="selectedTab === 4" :class="{ active: selectedTab === 4 }">
                     <div class="panel panel-default">
                         <div class="panel-body addBg">
                             <div class="ResGrid">
@@ -114,6 +129,103 @@
                                                 <td>{{service.VehicleNumber}}</td>
                                                 <td>{{service.UserFirstName}} {{service.UserLastName}} <br>
                                                     {{service.MobileNumber}}</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" v-if="selectedTab === 5" :class="{ active: selectedTab === 5 }">
+                    <div class="panel panel-default">
+                        <div class="panel-body addBg">                            
+                            <div class="ResGrid">
+                                <div class="dTable">
+                                    <table style="width: 100%; overflow:scroll;">
+                                        <thead>
+                                            <th>Building</th>
+                                            <th>Service</th>
+                                            <th>Service Date</th>
+                                            <th>Time Slot</th>
+                                            <th>Subscription</th>
+                                            <th>Quantity</th>
+                                            <th>Amount</th>
+                                            <th>Vehicle Number</th>
+                                            <th>Service Person</th>
+                                        </thead>
+                                        <tbody>
+                                            <tr v-for="service in services" style="height: 50px;"
+                                                v-if="service.ServiceType == 2 || (service.ServiceType == 1 && service.ParentId)">
+                                                <td>{{service.OtherAddressId ? (service.OtherAddressLine1 + ", " + service.OtherAddressLine2) :  (service.AddressLine1 + ', ' + service.ParkingLot)}}
+                                                </td>
+                                                <td>{{service.ServiceName}}</td>
+                                                <!-- <td>{{returnDateTime(service.RequestedOn)}}</td> -->
+                                                <td>{{returnDateTime(service.ServiceDate)}}</td>
+                                                <td>{{timeslots[service.TimeSlot]}}</td>
+                                                <td>{{service.SubscribeType ? service.SubscribeType : 'Once'}}</td>
+                                                <td v-if="false">₹
+                                                    {{service.ServiceType == 1 ? service.SubscriptionPrice : service.Price}}/-
+                                                </td>
+                                                <td>
+                                                    {{service.Quantity}}
+                                                </td>
+                                                <td>₹
+                                                    {{getServiceAmount(service)}}
+                                                </td>
+                                                <td>{{service.VehicleNumber}}</td>
+                                                <td>{{service.UserFirstName + ' ' + service.UserLastName}}</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" v-if="selectedTab === 6" :class="{ active: selectedTab === 6 }">
+                    <div class="panel panel-default">
+                        <div class="panel-body addBg">                            
+                            <div class="ResGrid">
+                                <div class="dTable">
+                                    <table style="width: 100%; overflow:scroll;">
+                                        <thead>
+                                            <th>Actions</th>
+                                            <th>Building</th>
+                                            <th>Service</th>
+
+                                            <th>Service Date</th>
+                                            <th>Time Slot</th>
+                                            <th>Subscription</th>
+                                            <th>Quantity</th>
+                                            <th>Amount</th>
+                                            <th>Vehicle Number</th>
+                                            <th>Service Person</th>
+                                        </thead>
+                                        <tbody>
+                                            <tr v-for="service in services" style="height: 50px;"
+                                                v-if="service.ServiceType == 2 || (service.ServiceType == 1 && service.ParentId)">
+                                                <td>
+                                                    NA
+                                                </td>
+                                                <td>{{service.OtherAddressId ? (service.OtherAddressLine1 + ", " + service.OtherAddressLine2) :  (service.AddressLine1 + ', ' + service.ParkingLot)}}
+                                                </td>
+                                                <td>{{service.ServiceName}}</td>
+                                                <!-- <td>{{returnDateTime(service.RequestedOn)}}</td> -->
+                                                <td>{{returnDateTime(service.ServiceDate)}}</td>
+                                                <td>{{timeslots[service.TimeSlot]}}</td>
+                                                <td>{{service.SubscribeType ? service.SubscribeType : 'Once'}}</td>
+                                                <td v-if="false">₹
+                                                    {{service.ServiceType == 1 ? service.SubscriptionPrice : service.Price}}/-
+                                                </td>
+                                                <td>
+                                                    {{service.Quantity}}
+                                                </td>
+                                                <td>₹
+                                                    {{getServiceAmount(service)}}
+                                                </td>
+                                                <td>{{service.VehicleNumber}}</td>
+                                                <td>{{service.UserFirstName + ' ' + service.UserLastName}}</td>
                                             </tr>
                                         </tbody>
                                     </table>
