--- a/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
+++ b/WebClient/src/components/homeModule/headerComponent/headerComponent.template.html
@@ -3,7 +3,7 @@
         <div class="loggedinHome">
             <div class="logoSection">
                 <a class="mainLogo">
-
+                    <img src="dist/img/logoImage.jpeg" width='70px' height="40px">
                     <!-- <span v-if="selectedClientObj" class="">{{ClientName}}</span> -->
                     <!-- <span v-if="(selectedClientObj && selectedClientObj.ClientId === 1 && ClientId !== 1)"><button title="Client List" @click="showPropertyPanel"><i style="font-size:24px" class="fa">&#xf107;</i></button></span> -->
                 </a>
