--- a/WebClient/src/components/myaccount/myProducts/myProducts.template.html
+++ b/WebClient/src/components/myaccount/myProducts/myProducts.template.html
@@ -7,7 +7,7 @@
         <span style="float: left;">
             <h5 class="header-subscribe">Vehicles</h5>
         </span>
-        <button class="btn btn-default" style="float: right;" @click="openVehicleAddPopup">
+        <button class="btn btn-primary" style="float: right;" @click="openVehicleAddPopup">
             Add
         </button>
     </div>
@@ -65,6 +65,7 @@
                 <button class="add-new" @click="openVehicleAddPopup">
                     +
                 </button>
+                <div class='bold'>Add Vehicle</div>
             </div>
         </div>
     </div>
