--- a/WebClient/src/components/myaccount/userCartPanel/userCartPanel.template.html
+++ b/WebClient/src/components/myaccount/userCartPanel/userCartPanel.template.html
@@ -1,36 +1,41 @@
 <div class="col-md-12">
 
     <div class="row" v-for="(cartItem, index) in cartItems"
-        style="border: 1px solid #808080; padding: 5px; width: 90%; margin-left: 15px; margin-top: 15px;">
+        style="border: 1px solid #1C3957; padding: 5px; width: 90%; margin-left: 15px; margin-top: 15px; border-radius: 5px;">
         <div class="col-md-12">
             <div class="row">                
-                <div class="col-md-4" style="width: 50%">
+                <div class="col-md-4" style="width: 80%; font-size: 13px;">
                     {{cartItem.ServiceName}}
                 </div>
-                <div class="col-md-4" style="width: 50%">
-                    ₹ {{itemPrice(cartItem)}}/-
-                    <span style="float: right;" @click="deleteCurrentItem(index)">
+                <div class="col-md-4" style="width: 20%">
+                  
+                    <span style="float: right;" class="icon-color" @click="deleteCurrentItem(index)">
                         <i class="far fa-trash-alt"></i>
                     </span>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
+            <div class="cart-flex">
+                <div class="width-form">
                     <quantityComponent :disabled="cartItem.VehicleCategoryType != 3" :updateParent="callbackFromQuantity" :callbackResponse="cartItem" :inputValue="cartItem.Quantity"></quantityComponent>
                 </div>
+                <div style="font-size: 17px;">
+                ₹ {{itemPrice(cartItem)}}/-
+            </div>
             </div>
         </div>
     </div>
 
     <div class="row" style="text-align: center; padding: 10px;">
         <div class="col-md-12">
-            <div class="form-group" style="bottom:0" v-if="cartItems.length">
-                <div class="cartTotalAmount">
+            <div class="cart-flex" style="bottom:0" v-if="cartItems.length">
+                <div>
                     Total: ₹ {{cartTotalValue}}/-
                 </div>
-                <button class="btn btn-success" @click="checkoutUserCartItems">
+                <div>
+                <button class="btn btn-primary" @click="checkoutUserCartItems">
                     Confirm
                 </button>
+            </div>
             </div>
             <div v-else>
                 <label>Looks like there are no items in cart, Please continue your shopping</label>
