--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -6,7 +6,7 @@
             <span class="iconUser" v-if="!userProfile.ProfileImage"><i class="far fa-user"></i></span>
         </div>
         <div class="row">
-            <div class="cold-md-12" style="text-align: center;">
+            <div class="cold-md-12" style="text-align: center; font-size:24px">
                 <label class="name">{{userProfile.UserFirstName}}</label>
                 <label class="name">{{userProfile.UserLastName}}</label>
             </div>
